--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 body {
   background-color: $background;
   font-family: 'Nunito';
+  overflow-x: hidden;
 }
 
 .wrapper {
@@ -48,11 +49,14 @@ body {
     margin-bottom: 50px;
   }
 
-  &__items {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    grid-column-gap: 11px;
+  &__items {/* + */
+ /*    display: flex; */
+    width: 1262px;
+    height: 682px;
+    background: rgb(163, 149, 149);
+    padding: 20px 20px 0 0;
+    border-radius: 20px;
+    margin-bottom: 150px;
 
     @media (max-width: 1400px) {
       grid-template-columns: repeat(3, 1fr);
@@ -196,6 +200,7 @@ body {
     border-top: 1px solid $gray-line;
     padding-top: 30px;
     margin-top: 30px;
+
 
     &-img {
       display: flex;
@@ -418,3 +423,72 @@ body {
     }
   }
 }
+
+
+.slider.slick-initialized.slick-slider{
+	position: relative;
+  padding: 100px 60px;
+	width: 500px;
+	height: 1000px;
+  z-index: 0;
+}
+
+.slick-slider{
+	min-width: 0;
+}
+
+.slick-list {
+  display: flex;
+	overflow: hidden;
+}
+
+.slick-track{
+	display: flex;
+	align-items: flex-start;
+}
+
+.slider_input{
+  position: absolute;
+  top: 1146px;
+  right: 845px;
+}
+
+.slick-slide.div{
+  width: 350px;
+}
+
+.input_slide{
+  border: 1px solid gray;
+  padding: 10px 20px;
+  width: 150px;
+  border-radius: 10px;
+  font-size: 15px;
+  outline: none;
+  margin-right: 10px;
+}
+
+.input_slide:focus{
+  border: 1px solid gray;
+}
+
+.input_submit{
+  border: 1px solid gray;
+  padding: 10px 20px;
+  width: 150px;
+  border-radius: 10px;
+  font-size: 15px;
+  outline: none;
+  margin-right: 10px;
+
+  &:disabled {
+    cursor: not-allowed;
+  }
+}
+
+.input_submit:focus{
+  border: 1px solid gray;
+  background-color: #787878;
+  color: white;
+}
+
+
